fix: reposition home page stores section learn more line for better spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,7 +651,7 @@ then move to the top of the section on smaller screen sizes */
 #stores-learn-more{
     text-align: center;
     position: absolute;
-    bottom: 50px;
+    bottom: 20px;
     width: 100%;
     margin: 0;
 }
